--- a/examples/iris_basic.ipynb
+++ b/examples/iris_basic.ipynb
@@ -18,29 +18,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "using kNN\n",
     "using MLDatasets, Random, DataFrames\n",
-    "using Plots, Printf, ProgressBars"
+    "using StatsBase, LinearAlgebra\n",
+    "using Plots, Printf"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load dataset and split into train and test part"
+    "Load dataset, normalise data features to zero mean and unit standard devitation\n",
+    "Split into train and test part"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = DataFrame(shuffle(eachrow(Iris().dataframe)));\n",
+    "\n",
+    "z(s, μ, σ, ϵ) = (s - μ) / (σ + ϵ)\n",
+    "for i=1:4\n",
+    "    tmp = dataset[:, i]\n",
+    "    dataset[:, i] = z.(tmp, mean(tmp), std(tmp), 10e-10)\n",
+    "end\n",
     "\n",
     "trn_data = dataset[1:130, :];\n",
     "test_data = dataset[131:end, :];"
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,38 +74,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute contingence table and accuracy of the classifier"
+    "Compute contingency table and accuracy of the classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acc = 0.90"
+      "acc = 0.95\n",
+      "                   Iris-virginica   Iris-versicolor   Iris-setosa   total   sensitivity\n",
+      " Iris-virginica   6.0              1.0               0.0           7.0     0.86\n",
+      " Iris-versicolor  0.0              7.0               0.0           7.0     1.0\n",
+      " Iris-setosa      0.0              0.0               6.0           6.0     1.0"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3×3 Matrix{Float64}:\n",
-       " 7.0  0.0  0.0\n",
-       " 0.0  6.0  0.0\n",
-       " 0.0  2.0  5.0"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "@printf \"acc = %.2f\" acc(classifier.classify, test_data[:, 1:4], DataFrame(class=test_data[:,5]))\n",
-    "contingence_table(classifier.classify, test_data[:, 1:4], DataFrame(class=test_data[:, 5]))"
+    "@printf \"acc = %.2f\\n\" acc(classifier.classify, test_data[:, 1:4], DataFrame(class=test_data[:,5]))\n",
+    "ct, lm = contingency_table(classifier.classify, test_data[:, 1:4], DataFrame(class=test_data[:, 5]))\n",
+    "\n",
+    "labels = map(x -> x[1], sort(collect(lm), by=x->x[2]))\n",
+    "\n",
+    "Base.print_matrix(stdout, [\n",
+    "    Text.([\"\"; labels]) [Text.([permutedims(labels) \"total\" \"sensitivity\"]); [\n",
+    "        Int.(ct) Int.(sum(ct, dims=2)) round.(diag(ct)./sum(ct, dims=2), digits=2)\n",
+    "    ]]\n",
+    "])\n"
    ]
   }
  ],
